Add jwt authentication policy

--- a/policy-manifest.yaml
+++ b/policy-manifest.yaml
@@ -15,3 +15,7 @@ policies:
   - name: BasicAuth
     version: v1.0.0
     filePath: ./basic-auth/v1.0.0
+
+  - name: JwtAuthentication
+    version: v1.0.0
+    filePath: ./jwt-auth/v1.0.0
