--- a/basic-auth/v1.0.0/policy-definition.yaml
+++ b/basic-auth/v1.0.0/policy-definition.yaml
@@ -6,44 +6,37 @@ description: |
   metadata in the request context for downstream policies to use.
 
 parameters:
-  - name: username
-    type: string
-    required: true
-    description: |
-      Expected username for authentication.
-      Compared against the username in the Basic auth header.
-    validation:
+  type: object
+  properties:
+    username:
+      type: string
+      description: Expected username for authentication. Compared against the username
+        in the Basic auth header.
       minLength: 1
       maxLength: 256
-
-  - name: password
-    type: string
-    required: true
-    description: |
-      Expected password for authentication.
-      Compared against the password in the Basic auth header.
-    validation:
+    password:
+      type: string
+      description: Expected password for authentication. Compared against the password
+        in the Basic auth header.
       minLength: 1
       maxLength: 256
-
-  - name: allowUnauthenticated
-    type: boolean
-    required: false
-    default: false
-    description: |
-      If true, allows unauthenticated requests to proceed to upstream.
-      Authentication status is still recorded in metadata (auth.success = false).
-      If false (default), returns 401 Unauthorized for failed authentication.
-
-  - name: realm
-    type: string
-    required: false
-    default: "Restricted"
-    description: |
-      Authentication realm shown in the WWW-Authenticate header.
-      Displayed to users in browser authentication prompts.
-    validation:
+    allowUnauthenticated:
+      type: boolean
+      description: If true, allows unauthenticated requests to proceed to upstream.
+        Authentication status is still recorded in metadata (auth.success = false).
+        If false (default), returns 401 Unauthorized for failed authentication.
+      default: false
+    realm:
+      type: string
+      description: Authentication realm shown in the WWW-Authenticate header. Displayed
+        to users in browser authentication prompts.
       minLength: 1
       maxLength: 256
+      default: Restricted
+  required:
+  - username
+  - password
 
-initParameters: []
+initParameters:         
+  type: object
+  properties: {}
