--- a/modify-headers/v1.0.0/policy-definition.yaml
+++ b/modify-headers/v1.0.0/policy-definition.yaml
@@ -6,74 +6,63 @@ description: |
   Can modify request headers before forwarding to upstream and response headers before returning to client.
 
 parameters:
-  - name: requestHeaders
-    type: array
-    required: false
-    description: |
-      Array of header modifications to apply during request phase.
-      At least one of requestHeaders or responseHeaders must be specified.
-    items:
-      type: object
-      properties:
-        - name: action
-          type: string
-          required: true
-          description: Action to perform on the header
-          validation:
+  type: object
+  properties:
+    requestHeaders:
+      type: array
+      description: Array of header modifications to apply during request phase. At least
+        one of requestHeaders or responseHeaders must be specified.
+      items:
+        type: object
+        properties:
+          action:
+            type: string
+            description: Action to perform on the header
             enum:
-              - SET
-              - APPEND
-              - DELETE
-
-        - name: name
-          type: string
-          required: true
-          description: Header name (case-insensitive)
-          validation:
+            - SET
+            - APPEND
+            - DELETE
+          name:
+            type: string
+            description: Header name (case-insensitive)
             minLength: 1
             maxLength: 256
-            pattern: '^[a-zA-Z0-9-_]+$'
-
-        - name: value
-          type: string
-          required: false
-          description: Header value (required for SET and APPEND, ignored for DELETE)
-          validation:
+            pattern: "^[a-zA-Z0-9-_]+$"
+          value:
+            type: string
+            description: Header value (required for SET and APPEND, ignored for DELETE)
             maxLength: 8192
-
-  - name: responseHeaders
-    type: array
-    required: false
-    description: |
-      Array of header modifications to apply during response phase.
-      At least one of requestHeaders or responseHeaders must be specified.
-    items:
-      type: object
-      properties:
-        - name: action
-          type: string
-          required: true
-          description: Action to perform on the header
-          validation:
+        required:
+        - action
+        - name
+    responseHeaders:
+      type: array
+      description: Array of header modifications to apply during response phase. At
+        least one of requestHeaders or responseHeaders must be specified.
+      items:
+        type: object
+        properties:
+          action:
+            type: string
+            description: Action to perform on the header
             enum:
-              - SET
-              - APPEND
-              - DELETE
-
-        - name: name
-          type: string
-          required: true
-          description: Header name (case-insensitive)
-          validation:
+            - SET
+            - APPEND
+            - DELETE
+          name:
+            type: string
+            description: Header name (case-insensitive)
             minLength: 1
             maxLength: 256
-            pattern: '^[a-zA-Z0-9-_]+$'
-
-        - name: value
-          type: string
-          required: false
-          description: Header value (required for SET and APPEND, ignored for DELETE)
-          validation:
+            pattern: "^[a-zA-Z0-9-_]+$"
+          value:
+            type: string
+            description: Header value (required for SET and APPEND, ignored for DELETE)
             maxLength: 8192
+        required:
+        - action
+        - name
 
-initParameters: []
+initParameters: 
+  type: object
+  properties: {}
