--- a/respond/v1.0.0/policy-definition.yaml
+++ b/respond/v1.0.0/policy-definition.yaml
@@ -6,49 +6,41 @@ description: |
   error responses, or implementing custom short-circuit logic.
 
 parameters:
-  - name: statusCode
-    type: integer
-    required: false
-    description: |
-      HTTP status code for the response.
-      Defaults to 200 if not specified.
-    validation:
+  type: object
+  properties:
+    statusCode:
+      type: integer
+      description: HTTP status code for the response. Defaults to 200 if not specified.
       minimum: 100
       maximum: 599
-    default: 200
-
-  - name: body
-    type: string
-    required: false
-    description: |
-      Response body content as a string.
-      Can be plain text, JSON, XML, or any other format.
-      Set appropriate content-type header to indicate the body format.
-    validation:
-      maxLength: 1048576  # 1MB max
-
-  - name: headers
-    type: array
-    required: false
-    description: |
-      Array of response headers to include in the response.
-      Each header must have 'name' and 'value' fields.
-    items:
-      type: object
-      properties:
-        - name: name
-          type: string
-          required: true
-          description: Header name
-          validation:
+      default: 200
+    body:
+      type: string
+      description: Response body content as a string. Can be plain text, JSON, XML,
+        or any other format. Set appropriate content-type header to indicate the body
+        format.
+      maxLength: 1048576
+    headers:
+      type: array
+      description: Array of response headers to include in the response. Each header
+        must have 'name' and 'value' fields.
+      items:
+        type: object
+        properties:
+          name:
+            type: string
+            description: Header name
             minLength: 1
             maxLength: 256
-            pattern: '^[a-zA-Z0-9-_]+$'
-        - name: value
-          type: string
-          required: true
-          description: Header value
-          validation:
+            pattern: "^[a-zA-Z0-9-_]+$"
+          value:
+            type: string
+            description: Header value
             maxLength: 8192
+        required:
+        - name
+        - value
 
-initParameters: []
+initParameters:
+  type: object
+  properties: {}
