--- a/semantic-cache/v0.1.0/policy-definition.yaml
+++ b/semantic-cache/v0.1.0/policy-definition.yaml
@@ -11,7 +11,7 @@ description: |
 parameters:
   type: object
   properties:
-    threshold:
+    similarityThreshold:
       type: number
       description: |
         Similarity threshold for cache hits (0.0 to 1.0). Higher values require more similarity.
@@ -25,7 +25,7 @@ parameters:
         Example: "$.messages[0].content"
       default: ""
   required:
-  - threshold
+  - similarityThreshold
 
 systemParameters:
   type: object
