feat: add basic rate limiting policy implementation
- Introduced a new basic rate limiting policy in the gateway, which simplifies request rate limiting by using route names as keys.
- Implemented the policy logic in `basic_ratelimit.go`, including methods for request and response handling.
- Created a `go.mod` file to manage dependencies for the new policy.
- Added a `go.sum` file to ensure consistent dependency resolution.
- Defined the policy parameters and configuration options in `policy-definition.yaml`, allowing for flexible rate limit settings.
- Updated the policy manifest to include the new basic rate limit policy alongside the existing advanced rate limit policy.

--- a/advanced-ratelimit/v0.1.0/policy-definition.yaml
+++ b/advanced-ratelimit/v0.1.0/policy-definition.yaml
@@ -1,4 +1,4 @@
-name: ratelimit
+name: advanced-ratelimit
 version: v0.1.0
 description: |
   Rate limiting policy supporting multiple algorithms (GCRA, Fixed Window), multi-dimensional quotas,
