--- a/.github/workflows/publish-policy.yml
+++ b/.github/workflows/publish-policy.yml
@@ -76,9 +76,9 @@ jobs:
         POLICY_DIR="policies/${{ github.event.inputs.policy }}"
         MAJOR="${{ steps.version-validation.outputs.major }}"
         
-        # For major version 1, files are at root level
+        # For major versions 0 and 1, files are at root level
         # For major version 2+, files are in v<major>/ subdirectory
-        if [ "$MAJOR" = "1" ]; then
+        if [ "$MAJOR" = "0" ] || [ "$MAJOR" = "1" ]; then
           TARGET_DIR="$POLICY_DIR"
         else
           TARGET_DIR="$POLICY_DIR/v$MAJOR"
@@ -106,9 +106,9 @@ jobs:
         POLICY_DIR="policies/${{ github.event.inputs.policy }}"
         MAJOR="${{ steps.version-validation.outputs.major }}"
         
-        # For major version 1, files are at root level
+        # For major versions 0 and 1, files are at root level
         # For major version 2+, files are in v<major>/ subdirectory
-        if [ "$MAJOR" = "1" ]; then
+        if [ "$MAJOR" = "0" ] || [ "$MAJOR" = "1" ]; then
           TARGET_DIR="$POLICY_DIR"
         else
           TARGET_DIR="$POLICY_DIR/v$MAJOR"
