--- a/.github/workflows/publish-policy.yml
+++ b/.github/workflows/publish-policy.yml
@@ -157,6 +157,7 @@ jobs:
       # Register Policy in Policy Hub (MANDATORY, multipart)
       # ------------------------------------------------------------
       - name: Register policy in Policy Hub
+        if: false  # Temporarily disabled
         id: policy-hub
         shell: bash
         env:
@@ -192,6 +193,16 @@ jobs:
             echo "registration_status=failed" >> "$GITHUB_OUTPUT"
             echo "registration_message=HTTP $STATUS: $BODY" >> "$GITHUB_OUTPUT"
           fi
+
+      # ------------------------------------------------------------
+      # Set default Policy Hub outputs (since registration is disabled)
+      # ------------------------------------------------------------
+      - name: Set default Policy Hub outputs
+        id: policy-hub
+        shell: bash
+        run: |
+          echo "registration_status=skipped" >> "$GITHUB_OUTPUT"
+          echo "registration_message=Policy Hub registration disabled for testing" >> "$GITHUB_OUTPUT"
 
       # ------------------------------------------------------------
       # Create and push Git tag (only on successful registration)
@@ -298,7 +309,7 @@ jobs:
         shell: bash
         run: |
           case "${{ steps.policy-hub.outputs.registration_status }}" in
-            success)
+            success|skipped)
               echo "✅ Workflow completed successfully"
               exit 0
               ;;
