--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,7 +1,7 @@
 name: PR Checks
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [main, master]
     paths:
       - 'policies/**'
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.pull_request_target.head.sha }}
 
       # ------------------------------------------------------------
       # Setup Go
@@ -51,9 +52,9 @@ jobs:
         id: changed-policies
         run: |
           # Get list of changed files
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            BASE_SHA="${{ github.event.pull_request.base.sha }}"
-            HEAD_SHA="${{ github.event.pull_request.head.sha }}"
+          if [[ "${{ github.event_name }}" == "pull_request_target" ]]; then
+            BASE_SHA="${{ github.event.pull_request_target.base.sha }}"
+            HEAD_SHA="${{ github.event.pull_request_target.head.sha }}"
           else
             BASE_SHA="${{ github.event.pull_request_target.base.sha }}"
             HEAD_SHA="${{ github.event.pull_request_target.head.sha }}"
