--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request_target.head.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
 
       # ------------------------------------------------------------
       # Setup Go
@@ -52,11 +52,11 @@ jobs:
         run: |
           # Get list of changed files
           if [[ "${{ github.event_name }}" == "pull_request_target" ]]; then
-            BASE_SHA="${{ github.event.pull_request_target.base.sha }}"
-            HEAD_SHA="${{ github.event.pull_request_target.head.sha }}"
+            BASE_SHA="${{ github.event.pull_request.base.sha }}"
+            HEAD_SHA="${{ github.event.pull_request.head.sha }}"
           else
-            BASE_SHA="${{ github.event.pull_request_target.base.sha }}"
-            HEAD_SHA="${{ github.event.pull_request_target.head.sha }}"
+            BASE_SHA="${{ github.event.pull_request.base.sha }}"
+            HEAD_SHA="${{ github.event.pull_request.head.sha }}"
           fi
 
           # Find changed policy directories
