--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -184,24 +184,22 @@ jobs:
             [[ -z "$policy" ]] && continue
             
             echo "Checking vulnerabilities in policy: $policy"
-            output=$(cd "policies/$policy" && govulncheck ./... 2>&1)
+            output=$(cd "policies/$policy" && govulncheck ./... 2>&1 || true)
             exit_code=$?
-            if [[ $exit_code -ne 0 ]]; then
-              if [[ $exit_code -eq 3 ]]; then
-                echo "ERRORS<<EOF" >> $GITHUB_ENV
-                echo "❌ Vulnerabilities found in policy: $policy" >> $GITHUB_ENV
-                echo "$output" >> $GITHUB_ENV
-                echo "" >> $GITHUB_ENV
-                echo "EOF" >> $GITHUB_ENV
-              else
-                echo "ERRORS<<EOF" >> $GITHUB_ENV
-                echo "❌ govulncheck failed for policy: $policy" >> $GITHUB_ENV
-                echo "$output" >> $GITHUB_ENV
-                echo "" >> $GITHUB_ENV
-                echo "EOF" >> $GITHUB_ENV
-              fi
-            else
+            if [[ $exit_code -eq 0 ]]; then
               echo "✅ govulncheck passed for policy: $policy"
+            elif [[ $exit_code -eq 3 ]]; then
+              echo "ERRORS<<EOF" >> $GITHUB_ENV
+              echo "❌ Vulnerabilities found in policy: $policy" >> $GITHUB_ENV
+              echo "$output" >> $GITHUB_ENV
+              echo "" >> $GITHUB_ENV
+              echo "EOF" >> $GITHUB_ENV
+            else
+              echo "ERRORS<<EOF" >> $GITHUB_ENV
+              echo "❌ govulncheck failed for policy: $policy" >> $GITHUB_ENV
+              echo "$output" >> $GITHUB_ENV
+              echo "" >> $GITHUB_ENV
+              echo "EOF" >> $GITHUB_ENV
             fi
           done <<< "${{ steps.changed-policies.outputs.policies }}"
 
