--- a/policies/url-guardrail/policy-definition.yaml
+++ b/policies/url-guardrail/policy-definition.yaml
@@ -1,4 +1,4 @@
-name: url-guardrail
+name: invalid-url-guardrail-name
 version: v0.1.0
 description: |
   Validates URLs found in request or response body content.
