--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -78,6 +78,8 @@ jobs:
                 echo "- Build failed" >> $SUMMARY_FILE
                 cat build.out >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+              else
+                echo "Build successful for $policy"
               fi
               cd ../..
             else
@@ -103,48 +105,67 @@ jobs:
             if cd "policies/$policy" 2>/dev/null; then
               # Formatting check
               if ! goimports -d . > goimports.out 2>&1; then
+                echo "Formatting failed for $policy"
                 echo "### $policy" >> $SUMMARY_FILE
                 echo "- Formatting failed" >> $SUMMARY_FILE
                 cat goimports.out >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+              else
+                echo "Formatting successful for $policy"
               fi
               # Static check
               if ! staticcheck ./... > staticcheck.out 2>&1; then
+                echo "Static check failed for $policy"
                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
                 echo "- Static check failed" >> $SUMMARY_FILE
                 cat staticcheck.out >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+              else
+                echo "Static check successful for $policy"
               fi
               # Vulnerability check
               if ! govulncheck ./... > govulncheck.out 2>&1; then
+                echo "Vulnerability check failed for $policy"
                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
                 echo "- Vulnerability check failed" >> $SUMMARY_FILE
                 cat govulncheck.out >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+              else
+                echo "Vulnerability check successful for $policy"
               fi
               # Gosec check
               if ! gosec ./... > gosec.out 2>&1; then
+                echo "Gosec check failed for $policy"
                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
                 echo "- Gosec check failed" >> $SUMMARY_FILE
                 cat gosec.out >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+              else
+                echo "Gosec check successful for $policy"
               fi
               # Tests
               if ! go test ./... > test.out 2>&1; then
+                echo "Tests failed for $policy"
                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
                 echo "- Tests failed" >> $SUMMARY_FILE
                 cat test.out >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+              else
+                echo "Tests successful for $policy"
               fi
               # Tests with race
               if ! go test -race ./... > test_race.out 2>&1; then
+                echo "Tests with race failed for $policy"
                 if ! grep -q "### $policy" $SUMMARY_FILE; then echo "### $policy" >> $SUMMARY_FILE; fi
                 echo "- Tests with race failed" >> $SUMMARY_FILE
                 cat test_race.out >> $SUMMARY_FILE
                 echo "" >> $SUMMARY_FILE
+              else
+                echo "Tests with race successful for $policy"
               fi
               cd ../..
             else
+              echo "Directory not found for checks for $policy"
               echo "### $policy" >> $SUMMARY_FILE
               echo "- Directory not found for checks" >> $SUMMARY_FILE
               echo "" >> $SUMMARY_FILE
